# Global-Game-Jam

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md
content/: bun.lockb  data.yml  index.ts  package.json  schema.json  tsconfig.json
engine/: Engine.cpp  Engine.hpp
engine/shape/: Shape.hpp
src/: Engine.cpp  Engine.hpp  Logging.hpp  main.cpp
src/Scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/Scene/Scenes/: BlackRectangle.cpp  BlackRectangle.hpp  Desktop.cpp  Desktop.hpp  WhiteRectangle.cpp  WhiteRectangle.hpp
src/button/: Button.cpp  Button.hpp  button.cpp  button.hpp
src/dialog/: dialog.cpp  dialog.hpp
src/engine/: Engine.cpp  Engine.hpp  SceneManager.cpp  SceneManager.hpp
src/graphics/: AssetsLoader.cpp  AssetsLoader.hpp  Icon.cpp  Icon.hpp  LoadAssets.cpp  LoadAssets.hpp  Sprite.cpp  Sprite.hpp
src/music/: Music.cpp  Music.hpp
src/parsing/: YmlParser.cpp  YmlParser.hpp
src/scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/scene/Scenes/: BlackRectangle.cpp  BlackRectangle.hpp  Desktop.cpp  Desktop.hpp  FileExplorer.cpp  FileExplorer.hpp  HomePage.cpp  HomePage.hpp  ImageViewer.cpp  ImageViewer.hpp  MessageBox.cpp  MessageBox.hpp  WhiteRectangle.cpp  WhiteRectangle.hpp
src/shape/: Shape.cpp  Shape.hpp
src/sound/: Sound.cpp  Sound.hpp
src/text/: Text.cpp  Text.hpp
src/utils/: Logging.hpp  Mouse.cpp  Mouse.hpp
